--- a/TUDthesis.tex
+++ b/TUDthesis.tex
@@ -904,7 +904,7 @@ the resources from infinite nodes are used to serve the upcoming VN requests.
 	\label{cpu_alloc}
 \end{figure}
 
-The figure (fig .\ref{cpu_alloc}) shows the allocation of CPU resources for each VN request. 
+The figure (fig .\ref{cpu_alloc}) shows the allocation of CPU resources for each VN request. We run 100 VN request per one round
 
 
 
